--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-  <div className="relative flex justify-center items-center my-[11px]">
+     <div className="relative flex justify-center items-center my-[11px]">
             <div className="w-full h-px bg-[#E3E3E3]" />
-            <div className="absolute top-[-6px] w-3 h-3 bg-white border-r border-b border-[#E3E3E3] rotate-45"></div>
+            {/* Wrapper branco para cobrir linha atrás da seta */}
+            <div className="absolute top-[-6px] w-4 h-4 bg-white flex items-center justify-center">
+              <div className="w-3 h-3 bg-white border-r border-b border-[#E3E3E3] rotate-45"></div>
+            </div>
           </div>
