--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,69 @@
-DanielG@NYDEVVDI0027 MINGW64 /h/workspace/fee-management-frontend (develop)
-$ npm i -D npm-check-updates
-npm error code ERESOLVE
-npm error ERESOLVE could not resolve
-npm error
-npm error While resolving: @conductor/global-activity-user@1.0.5
-npm error Found: @mui/material@5.11.11
-npm error node_modules/@mui/material
-npm error   peer @mui/material@"^5.0.0" from @mui/icons-material@5.11.11
-npm error   node_modules/@mui/icons-material
-npm error     @mui/icons-material@"5.11.11" from the root project
-npm error   @mui/material@"5.11.11" from the root project
-npm error
-npm error Could not resolve dependency:
-npm error peer @mui/material@"^5.14.14" from @conductor/global-activity-user@1.0.5
-npm error node_modules/@conductor/global-activity-user
-npm error   @conductor/global-activity-user@"^1.0.5" from the root project
-npm error
-npm error Conflicting peer dependency: @mui/material@5.17.1
-npm error node_modules/@mui/material
-npm error   peer @mui/material@"^5.14.14" from @conductor/global-activity-user@1.0.5
-npm error   node_modules/@conductor/global-activity-user
-npm error     @conductor/global-activity-user@"^1.0.5" from the root project
-npm error
-npm error Fix the upstream dependency conflict, or retry
-npm error this command with --force or --legacy-peer-deps
-npm error to accept an incorrect (and potentially broken) dependency resolution.
-npm error
-npm error
-npm error For a full report see:
-npm error C:\Users\DanielG\AppData\Local\npm-cache\_logs\2025-04-23T13_01_23_259Z-eresolve-report.txt
-npm error A complete log of this run can be found in: C:\Users\DanielG\AppData\Local\npm-cache\_logs\2025-04-23T13_01_23_259Z-debug-0.log
+➜ Rota A (recomendada) — “troca a roda primeiro”
+Remova o pacote que exige MUI ≥ 5.14
 
-DanielG@NYDEVVDI0027 MINGW64 /h/workspace/fee-management-frontend (develop)
-$ npx ncu "/@mui\/(material|icons-material)/" -u
-npm error Maximum call stack size exceeded
-npm error A complete log of this run can be found in: C:\Users\DanielG\AppData\Local\npm-cache\_logs\2025-04-23T13_01_40_797Z-debug-0.log
+bash
+Copiar
+Editar
+npm uninstall @conductor/global-activity-user
+Suba o MUI para 5.17 (ou ≥ 5.14) usando o modo “não checa peer”
+
+bash
+Copiar
+Editar
+npm install @mui/material@^5.17.1 \
+            @mui/icons-material@^5.17.1 \
+            --save --legacy-peer-deps
+Reinstale o Conductor (agora não conflita mais):
+
+bash
+Copiar
+Editar
+npm install @conductor/global-activity-user@1.0.5 --save
+Limpe e reconstrua:
+
+bash
+Copiar
+Editar
+rm -rf node_modules package-lock.json
+npm ci                               # instala clean
+npm run build
+— Conflito resolvido de forma definitiva.
+
+➜ Rota B (paliativa) — “instala mesmo assim”
+Se você só quer rodar npm-check-updates ou qualquer outro pacote AGORA:
+
+bash
+Copiar
+Editar
+# flag vale para QUALQUER comando que instale dependências
+npm install -D npm-check-updates --legacy-peer-deps
+npx ncu '/@mui\/(material|icons-material)/' -u
+npm install --legacy-peer-deps
+O parâmetro --legacy-peer-deps faz o npm voltar ao comportamento da versão 6 (ignora conflito) 
+Stack Overflow
+Stack Overflow
+.
+
+🛠️ Sobre o “Maximum call stack size exceeded”
+Esse estouro acontece quando o npm entra num loop interno depois de falhar na resolução; é um bug recorrente 
+GitHub
+GitHub
+.
+Duas medidas que normalmente eliminam o erro:
+
+bash
+Copiar
+Editar
+npm cache clean --force
+node -v            # prefira Node 20 LTS + npm 10
+npm install --legacy-peer-deps
+Se ainda estourar, delete node_modules + package-lock.json e tente de novo — quase sempre resolve.
+
+Checklist rápido após upgrade
+npm run lint && npm run test && npm run build
+
+Abra a aplicação e valide visuais (28 arquivos MUI → correções mínimas).
+
+Suba o branch e peça QA.
+
+Se precisar de mais detalhes (warnings pós-upgrade, script de lint para evitar imports errados etc.), chama aqui!
