--- a/.gitignore
+++ b/.gitignore
@@ -1,69 +1,58 @@
-➜ Rota A (recomendada) — “troca a roda primeiro”
-Remova o pacote que exige MUI ≥ 5.14
-
-bash
-Copiar
-Editar
-npm uninstall @conductor/global-activity-user
-Suba o MUI para 5.17 (ou ≥ 5.14) usando o modo “não checa peer”
-
-bash
-Copiar
-Editar
-npm install @mui/material@^5.17.1 \
-            @mui/icons-material@^5.17.1 \
-            --save --legacy-peer-deps
-Reinstale o Conductor (agora não conflita mais):
-
-bash
-Copiar
-Editar
-npm install @conductor/global-activity-user@1.0.5 --save
-Limpe e reconstrua:
-
-bash
-Copiar
-Editar
-rm -rf node_modules package-lock.json
-npm ci                               # instala clean
-npm run build
-— Conflito resolvido de forma definitiva.
-
-➜ Rota B (paliativa) — “instala mesmo assim”
-Se você só quer rodar npm-check-updates ou qualquer outro pacote AGORA:
-
-bash
-Copiar
-Editar
-# flag vale para QUALQUER comando que instale dependências
-npm install -D npm-check-updates --legacy-peer-deps
-npx ncu '/@mui\/(material|icons-material)/' -u
-npm install --legacy-peer-deps
-O parâmetro --legacy-peer-deps faz o npm voltar ao comportamento da versão 6 (ignora conflito) 
-Stack Overflow
-Stack Overflow
-.
-
-🛠️ Sobre o “Maximum call stack size exceeded”
-Esse estouro acontece quando o npm entra num loop interno depois de falhar na resolução; é um bug recorrente 
-GitHub
-GitHub
-.
-Duas medidas que normalmente eliminam o erro:
-
-bash
-Copiar
-Editar
-npm cache clean --force
-node -v            # prefira Node 20 LTS + npm 10
-npm install --legacy-peer-deps
-Se ainda estourar, delete node_modules + package-lock.json e tente de novo — quase sempre resolve.
-
-Checklist rápido após upgrade
-npm run lint && npm run test && npm run build
-
-Abra a aplicação e valide visuais (28 arquivos MUI → correções mínimas).
-
-Suba o branch e peça QA.
-
-Se precisar de mais detalhes (warnings pós-upgrade, script de lint para evitar imports errados etc.), chama aqui!
+npm i
+npm warn ERESOLVE overriding peer dependency
+npm warn While resolving: snb-conductor@0.1.0
+npm warn Found: @mui/styled-engine-sc@5.11.11
+npm warn node_modules/@mui/styled-engine-sc
+npm warn   @mui/styled-engine-sc@"5.17.11" from the root project
+npm warn
+npm warn Could not resolve dependency:
+npm warn peer @mui/styled-engine-sc@"^6.0.0-alpha.2" from @conductor/global-activity-user@1.0.5
+npm warn node_modules/@conductor/global-activity-user
+npm warn   @conductor/global-activity-user@"^1.0.5" from the root project
+npm warn ERESOLVE overriding peer dependency
+npm warn While resolving: snb-conductor@0.1.0
+npm warn Found: @mui/styled-engine-sc@5.11.11
+npm warn node_modules/@mui/styled-engine-sc
+npm warn   @mui/styled-engine-sc@"5.17.11" from the root project
+npm warn
+npm warn Could not resolve dependency:
+npm warn peer @mui/styled-engine-sc@"^6.0.0-alpha.2" from @conductor/global-header@0.8.1
+npm warn node_modules/@conductor/global-header
+npm warn   @conductor/global-header@"^0.8.1" from the root project
+npm warn ERESOLVE overriding peer dependency
+npm warn While resolving: snb-conductor@0.1.0
+npm warn Found: @mui/styled-engine-sc@5.11.11
+npm warn node_modules/@mui/styled-engine-sc
+npm warn   @mui/styled-engine-sc@"5.17.11" from the root project
+npm warn
+npm warn Could not resolve dependency:
+npm warn peer @mui/styled-engine-sc@"^6.0.0-alpha.2" from @conductor/global-login@1.1.6
+npm warn node_modules/@conductor/global-login
+npm warn   @conductor/global-login@"^1.1.6" from the root project
+npm error code ERESOLVE
+npm error ERESOLVE could not resolve
+npm error
+npm error While resolving: @conductor/global-activity-user@1.0.5
+npm error Found: next@13.2.3
+npm error node_modules/next
+npm error   next@"13.2.3" from the root project
+npm error
+npm error Could not resolve dependency:
+npm error peer next@"13.5.6" from @conductor/global-activity-user@1.0.5
+npm error node_modules/@conductor/global-activity-user
+npm error   @conductor/global-activity-user@"^1.0.5" from the root project
+npm error
+npm error Conflicting peer dependency: next@13.5.6
+npm error node_modules/next
+npm error   peer next@"13.5.6" from @conductor/global-activity-user@1.0.5
+npm error   node_modules/@conductor/global-activity-user
+npm error     @conductor/global-activity-user@"^1.0.5" from the root project
+npm error
+npm error Fix the upstream dependency conflict, or retry
+npm error this command with --force or --legacy-peer-deps
+npm error to accept an incorrect (and potentially broken) dependency resolution.
+npm error
+npm error
+npm error For a full report see:
+npm error C:\Users\DanielG\AppData\Local\npm-cache\_logs\2025-04-23T16_05_20_059Z-eresolve-report.txt
+npm error A complete log of this run can be found in: C:\Users\DanielG\AppData\Local\npm-cache\_logs\2025-04-23T16_05_20_059Z-debug-0.log
