--- a/.gitignore
+++ b/.gitignore
@@ -1,58 +1,60 @@
-npm i
-npm warn ERESOLVE overriding peer dependency
-npm warn While resolving: snb-conductor@0.1.0
-npm warn Found: @mui/styled-engine-sc@5.11.11
-npm warn node_modules/@mui/styled-engine-sc
-npm warn   @mui/styled-engine-sc@"5.17.11" from the root project
-npm warn
-npm warn Could not resolve dependency:
-npm warn peer @mui/styled-engine-sc@"^6.0.0-alpha.2" from @conductor/global-activity-user@1.0.5
-npm warn node_modules/@conductor/global-activity-user
-npm warn   @conductor/global-activity-user@"^1.0.5" from the root project
-npm warn ERESOLVE overriding peer dependency
-npm warn While resolving: snb-conductor@0.1.0
-npm warn Found: @mui/styled-engine-sc@5.11.11
-npm warn node_modules/@mui/styled-engine-sc
-npm warn   @mui/styled-engine-sc@"5.17.11" from the root project
-npm warn
-npm warn Could not resolve dependency:
-npm warn peer @mui/styled-engine-sc@"^6.0.0-alpha.2" from @conductor/global-header@0.8.1
-npm warn node_modules/@conductor/global-header
-npm warn   @conductor/global-header@"^0.8.1" from the root project
-npm warn ERESOLVE overriding peer dependency
-npm warn While resolving: snb-conductor@0.1.0
-npm warn Found: @mui/styled-engine-sc@5.11.11
-npm warn node_modules/@mui/styled-engine-sc
-npm warn   @mui/styled-engine-sc@"5.17.11" from the root project
-npm warn
-npm warn Could not resolve dependency:
-npm warn peer @mui/styled-engine-sc@"^6.0.0-alpha.2" from @conductor/global-login@1.1.6
-npm warn node_modules/@conductor/global-login
-npm warn   @conductor/global-login@"^1.1.6" from the root project
-npm error code ERESOLVE
-npm error ERESOLVE could not resolve
-npm error
-npm error While resolving: @conductor/global-activity-user@1.0.5
-npm error Found: next@13.2.3
-npm error node_modules/next
-npm error   next@"13.2.3" from the root project
-npm error
-npm error Could not resolve dependency:
-npm error peer next@"13.5.6" from @conductor/global-activity-user@1.0.5
-npm error node_modules/@conductor/global-activity-user
-npm error   @conductor/global-activity-user@"^1.0.5" from the root project
-npm error
-npm error Conflicting peer dependency: next@13.5.6
-npm error node_modules/next
-npm error   peer next@"13.5.6" from @conductor/global-activity-user@1.0.5
-npm error   node_modules/@conductor/global-activity-user
-npm error     @conductor/global-activity-user@"^1.0.5" from the root project
-npm error
-npm error Fix the upstream dependency conflict, or retry
-npm error this command with --force or --legacy-peer-deps
-npm error to accept an incorrect (and potentially broken) dependency resolution.
-npm error
-npm error
-npm error For a full report see:
-npm error C:\Users\DanielG\AppData\Local\npm-cache\_logs\2025-04-23T16_05_20_059Z-eresolve-report.txt
-npm error A complete log of this run can be found in: C:\Users\DanielG\AppData\Local\npm-cache\_logs\2025-04-23T16_05_20_059Z-debug-0.log
+{
+  "name": "snb-conductor",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "build:development": "cp ./envs/.env.development .env && yarn build",
+    "build:staging": "cp ./envs/.env.staging .env && yarn build",
+    "build:production": "cp ./envs/.env.production .env && yarn build",
+    "build:production2": "cp ./envs/.env.production2 .env && yarn build",
+    "stage:": "cp ./envs/.env.stage .env && yarn build && yarn start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@conductor/global-activity-user": "^1.0.5",
+    "@conductor/global-header": "^0.8.1",
+    "@conductor/global-login": "^1.1.6",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@material-ui/styles": "4.11.5",
+    "@mui/icons-material": "5.11.11",
+    "@mui/material": "5.11.11",
+    "@mui/styled-engine-sc": "5.11.11",
+    "@tanstack/react-query": "^4.29.5",
+    "@tanstack/react-query-devtools": "^5.59.0",
+    "@types/aria-query": "^5.0.4",
+    "@types/axios": "^0.14.0",
+    "@types/node": "18.14.4",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "@types/react-lottie": "^1.2.6",
+    "@types/react-router-dom": "^5.3.3",
+    "antd": "5.3.1",
+    "axios": "^1.4.0",
+    "dotenv-webpack": "^8.0.1",
+    "env-cmd": "^10.1.0",
+    "eslint": "8.35.0",
+    "eslint-config-next": "13.2.3",
+    "js-cookie": "^3.0.5",
+    "next": "13.2.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-lottie": "^1.2.3",
+    "react-router-dom": "^6.11.2",
+    "react-tabs": "^6.0.0",
+    "react-toastify": "^10.0.5",
+    "styled-components": "^5.3.8",
+    "typescript": "4.9.5",
+    "zustand": "^4.3.5"
+  },
+  "devDependencies": {
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.38",
+    "@types/js-cookie": "^3.0.3",
+    "@types/styled-components": "^5.1.26",
+    "babel-plugin-styled-components": "^2.0.7"
+  }
+}
