--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
   "name": "snb-conductor",
   "version": "0.1.0",
   "private": true,
+
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -13,18 +14,24 @@
     "stage:": "cp ./envs/.env.stage .env && yarn build && yarn start",
     "lint": "next lint"
   },
+
   "dependencies": {
     "@conductor/global-activity-user": "^1.0.5",
     "@conductor/global-header": "^0.8.1",
     "@conductor/global-login": "^1.1.6",
+
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+
     "@material-ui/styles": "4.11.5",
-    "@mui/icons-material": "5.11.11",
-    "@mui/material": "5.11.11",
-    "@mui/styled-engine-sc": "5.11.11",
+
+    "@mui/icons-material": "5.17.17",           /* ▲ */
+    "@mui/material": "5.17.17",                 /* ▲ */
+    "@mui/styled-engine-sc": "6.0.0-alpha.2",   /* ▲ (era 5.11.11) */
+
     "@tanstack/react-query": "^4.29.5",
     "@tanstack/react-query-devtools": "^5.59.0",
+
     "@types/aria-query": "^5.0.4",
     "@types/axios": "^0.14.0",
     "@types/node": "18.14.4",
@@ -32,29 +39,43 @@
     "@types/react-dom": "18.0.11",
     "@types/react-lottie": "^1.2.6",
     "@types/react-router-dom": "^5.3.3",
+
     "antd": "5.3.1",
     "axios": "^1.4.0",
     "dotenv-webpack": "^8.0.1",
     "env-cmd": "^10.1.0",
+
     "eslint": "8.35.0",
-    "eslint-config-next": "13.2.3",
+    "eslint-config-next": "13.5.6",             /* ▲ */
+
     "js-cookie": "^3.0.5",
-    "next": "13.2.3",
+
+    "next": "13.5.6",                           /* ▲ */
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^6.11.2",
     "react-tabs": "^6.0.0",
     "react-toastify": "^10.0.5",
-    "styled-components": "^5.3.8",
+
+    "styled-components": "^6.1.4",              /* ▲ major upgrade */
     "typescript": "4.9.5",
     "zustand": "^4.3.5"
   },
+
   "devDependencies": {
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.38",
+
     "@types/js-cookie": "^3.0.3",
-    "@types/styled-components": "^5.1.26",
+    "@types/styled-components": "^5.1.26",      /* ▲ ainda v5 - ver observação */
+
     "babel-plugin-styled-components": "^2.0.7"
+  },
+
+  /* ★ força npm a sempre usar as versões necessárias  */
+  "overrides": {
+    "@mui/styled-engine-sc": "6.0.0-alpha.2",
+    "next": "13.5.6"
   }
 }
