--- a/.gitignore
+++ b/.gitignore
@@ -1,108 +1,112 @@
+import { Fee } from '#src/models/entities/Fees.js'
+import Result from '#features/shared/result.js'
+import CustomerFees from '#src/models/CustomerFees.js'
+import BankAccountFee from '#src/models/BankAccountFee.js'
+import InvestimentAccountFee from '#src/models/InvestimentAccountFee.js'
+import { FeeCase } from '#src/models/entities/FeeCase.js'
+import { Field } from '#src/models/entities/Fields.js'
 
+export default class FeeGetByCifUseCase {
+  async execute({ customerAccount }) {
+    global.logger.info('FeeGetByCifUseCase()')
 
-[14:46:09.451] INFO (13136): Starting configuration for env: Local
-[14:46:09.452] INFO (13136): Loading env using file H:\workspace\fee-management-backend\.env
-[14:46:09.471] INFO (13136): bootstraping application
-[14:46:10.058] INFO (13136): Server started on :::3333
-[14:46:20.636] INFO (13136): request completed
-    req: {
-      "id": "4c4308c133176602c91bb2b9",
-      "method": "GET",
-      "url": "/api/fee/group",
-      "query": {},
-      "params": {},
-      "headers": {
-        "host": "localhost:3333",
-        "connection": "keep-alive",
-        "sec-ch-ua": "\"Chromium\";v=\"136\", \"Microsoft Edge\";v=\"136\", \"Not.A/Brand\";v=\"99\"",
-        "sec-ch-ua-mobile": "?0",
-        "sec-ch-ua-platform": "\"Windows\"",
-        "upgrade-insecure-requests": "1",
-        "user-agent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/136.0.0.0 Safari/537.36 Edg/136.0.0.0",
-        "accept": "text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.7",
-        "sec-fetch-site": "none",
-        "sec-fetch-mode": "navigate",
-        "sec-fetch-user": "?1",
-        "sec-fetch-dest": "document",
-        "accept-encoding": "gzip, deflate, br, zstd",
-        "accept-language": "en-US,en;q=0.9"
+    const result = { fees: [] }
+    const fees = await this.#getFeeStandard([
+      {
+        feeType: 'Customer Fees'
       },
-      "remoteAddress": "::1",
-      "remotePort": 59091
-    }
-    res: {
-      "statusCode": 404,
-      "headers": {
-        "cross-origin-embedder-policy": "require-corp",
-        "cross-origin-opener-policy": "same-origin",
-        "cross-origin-resource-policy": "same-origin",
-        "x-dns-prefetch-control": "off",
-        "x-frame-options": "SAMEORIGIN",
-        "strict-transport-security": "max-age=15552000; includeSubDomains",
-        "x-download-options": "noopen",
-        "x-content-type-options": "nosniff",
-        "origin-agent-cluster": "?1",
-        "x-permitted-cross-domain-policies": "none",
-        "referrer-policy": "no-referrer",
-        "x-xss-protection": "0",
-        "access-control-allow-origin": "*",
-        "x-request-id": "4c4308c133176602c91bb2b9",
-        "x-correlation-id": "4c4308c133176602c91bb2b9",
-        "content-security-policy": "default-src 'none'",
-        "content-type": "text/html; charset=utf-8",
-        "content-length": 152
-      }
-    }
-    responseTime: 5
-[14:46:20.707] INFO (13136): request completed
-    req: {
-      "id": "937b1932329d29fe504c6f0b",
-      "method": "GET",
-      "url": "/.well-known/appspecific/com.chrome.devtools.json",
-      "query": {},
-      "params": {},
-      "headers": {
-        "host": "localhost:3333",
-        "connection": "keep-alive",
-        "sec-fetch-site": "same-origin",
-        "sec-fetch-mode": "no-cors",
-        "sec-fetch-dest": "empty",
-        "user-agent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/136.0.0.0 Safari/537.36 Edg/136.0.0.0",
-        "accept-encoding": "gzip, deflate, br, zstd",
-        "accept-language": "en-US,en;q=0.9"
+      {
+        feeType: 'Bank Account Fees'
       },
-      "remoteAddress": "::1",
-      "remotePort": 59091
-    }
-    res: {
-      "statusCode": 404,
-      "headers": {
-        "cross-origin-embedder-policy": "require-corp",
-        "cross-origin-opener-policy": "same-origin",
-        "cross-origin-resource-policy": "same-origin",
-        "x-dns-prefetch-control": "off",
-        "x-frame-options": "SAMEORIGIN",
-        "strict-transport-security": "max-age=15552000; includeSubDomains",
-        "x-download-options": "noopen",
-        "x-content-type-options": "nosniff",
-        "origin-agent-cluster": "?1",
-        "x-permitted-cross-domain-policies": "none",
-        "referrer-policy": "no-referrer",
-        "x-xss-protection": "0",
-        "access-control-allow-origin": "*",
-        "x-request-id": "937b1932329d29fe504c6f0b",
-        "x-correlation-id": "937b1932329d29fe504c6f0b",
-        "content-security-policy": "default-src 'none'",
-        "content-type": "text/html; charset=utf-8",
-        "content-length": 187
+      {
+        feeType: 'Investment Account Fees'
       }
+    ])
+
+    const customer = new CustomerFees(fees, customerAccount)
+    if (customer.fee) result.fees.push(customer.fee)
+
+    const bank = new BankAccountFee(fees, customerAccount)
+    if (bank.fee) result.fees.push(bank.fee)
+
+    const equityField = await Field.find({ code: 7 })
+    const investiment = new InvestimentAccountFee(
+      fees,
+      customerAccount,
+      equityField[0]
+    )
+    if (investiment.fee?.feeGroups) result.fees.push(investiment.fee)
+
+      const feePackageId = feesData[0]['Default Fee Package Id'];
+      if (!feePackageId) {
+        throw new Error('Default Fee Package Id not found in feesData');
+      }
+
+    const feesActives = await FeeCase.find({
+      cif: customerAccount[0].cifno,
+      status: {
+        $nin: ['DONE', 'REJECTED']
+      },
+      caseNumber: {
+        $exists: true
+      }
+    })
+
+    result.feesActives = feesActives?.map((x) => ({
+      caseNumber: x.caseNumber,
+      id: x.id
+    }))
+
+    result.documentUrl =
+    this.#getDocumentUrl(feePackageId);
+
+    global.logger.info(`documentUrl= ${result.document}`)
+
+    return Result.ok(result)
+  }
+
+  
+  #getDocumentUrl(feePackageId) {
+    const scheduleUrls = global.environment.scheduleUrls;
+    const packageMap = {
+      1: 'intlPB3',
+      2: 'uSPBIndividual3',
+      3: 'uSPBCorporation3',
+     };
+
+    const scheduleType = packageMap[feePackageId] || '';
+    return scheduleUrls[scheduleType] || '';
+  }
+
+  async #getFeeStandard(filter) {
+    global.logger.info('getFeeStandard()')
+
+    const feeResult = []
+
+    for await (const fee of Fee.find({
+      $or: filter
+    }).select({
+      feeType: 1,
+      feeGroups: {
+        name: 1,
+        fields: 1,
+        code: 1
+      }
+    })) {
+      feeResult.push(fee.toObject())
     }
-    responseTime: 1
 
-Aparece isso no console 
+    return feeResult
+  }
+}
 
-Se eu digito isso em um navegador comum....
+>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
 
-http://localhost:3333/api/fee/group
+import { Router } from 'express'
+import feeGetByCifEndpoint from './feeGetByCifEndpoint.js'
 
+const feeGetByCifRouter = Router()
+
+feeGetByCifRouter.post('/fee', feeGetByCifEndpoint)
+export default feeGetByCifRouter
 
